# flipper

./: .gitignore  README.md  docker-compose.yml  test.py
examples/nodejs_consumer/: Dockerfile  main.js  package-lock.json
nginx/data/: default.conf
schedul_rs/: Cargo.toml  Dockerfile
schedul_rs/src/: follower.rs  leader.rs  lib.rs  main.rs  redoer.rs  sutils.rs
test/: test_basic.py
