[package]
name = "schedul_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-watch = "8.4.1"
chrono = "0.4.31"
cron = "0.12.0"
kafka = "0.10.0"
lazy_static = "1.4.0"
nickel = "*"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.11.0", features = ["full"] }
tokio-cron-scheduler = "*"
tokio-postgres = { version = "0.7.4", features = ["with-chrono-0_4"] }
